apps/base/forgejo-runner/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: runner
    app.kubernetes.io/instance: forgejo-runner
    app.kubernetes.io/name: forgejo-runner
  name: forgejo-runner
  namespace: forgejo-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo-runner
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: forgejo-runner
        app.kubernetes.io/component: runner
        app.kubernetes.io/instance: forgejo-runner
        app.kubernetes.io/name: forgejo-runner
        policy-type: app
    spec:
      containers:
      - args:
        - --tls=false
        image: docker:29-dind
        name: docker
        ports:
        - containerPort: 2375
          protocol: TCP
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /var/lib/docker
          name: docker-storage
      - command:
        - sh
        - -c
        - |
          echo "Waiting for Docker daemon..."
          while ! wget -q -O- http://localhost:2375/version >/dev/null 2>&1; do
            sleep 1
          done
          echo "Docker is ready!"
          forgejo-runner daemon --config /config/config.yaml
        image: data.forgejo.org/forgejo/runner:13.0.0
        name: runner
        volumeMounts:
        - mountPath: /data
          name: runner-data
        - mountPath: /config
          name: config
        - mountPath: /secrets/runner-token
          name: runner-token
          readOnly: true
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
      volumes:
      - emptyDir: {}
        name: runner-data
      - name: docker-storage
        persistentVolumeClaim:
          claimName: forgejo-runner-docker-cache
      - configMap:
          name: forgejo-runner-config
        name: config
      - name: runner-token
        secret:
          secretName: forgejo-runner-container-env
          items:
          - key: RUNNER_TOKEN
            path: token
